tests/samples/negative/pattern_matching/struct_pattern_duplicate_field.ax
module struct_pattern_duplicate_field;

struct Point {
    x: i32;
    y: i32;
}

fn main() -> i32 {
    let point = Point { x: 1, y: 2 };
    return match point {
        Point { x: 1, x: other } => other,
        _ => 0,
    };
}
